add: Article Pages

--- a/src/components/atoms/Button/button.scss
+++ b/src/components/atoms/Button/button.scss
@@ -1,12 +1,12 @@
 .button {
     padding: 12px;
-    font-size: 16px;
-    background-color: #87c73c;
+    font-size: 14px;
+    background-color: #06D001;
     width: 100%;
     box-sizing: border-box;
     border-radius: 12px;
     border: none;
     color: white;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     cursor: pointer;
 }
