--- a/src/components/molecules/Header/header.scss
+++ b/src/components/molecules/Header/header.scss
@@ -1,18 +1,19 @@
 .header {
     display: flex;
     justify-content: space-between;
+    border-bottom: 2px solid #000000;
     align-items: center;
     padding: 20px 40px;
-    background-color: #68b35c;
+    background-color: #ffffff;
     .logo-app {
     font-size: 20px;
     font-weight: bold;
-    color: white;
+    color: black;
     margin: 0px;
     }
     .menu-item {
         font-size: 18px;
-        color: white;
+        color: black;
         text-decoration: underline;
         cursor: pointer;
         margin: 0px;
